fixed css and white-spacing bugs

--- a/src/components/invoice-progress-bar/invoice-progress-bar.scss
+++ b/src/components/invoice-progress-bar/invoice-progress-bar.scss
@@ -13,6 +13,7 @@
     left: 0;
     top: 0;
     height: 100%;
+    border-radius: $border-radius $border-radius 0 0;
     background: $primary;
     will-change: width;
     transition: width 1s linear !important;
